Updated documentation for Python katas.

--- a/python/katas/_modules/codesignal/find_middle_element.html
+++ b/python/katas/_modules/codesignal/find_middle_element.html
@@ -257,9 +257,7 @@
 <div class="viewcode-block" id="ListNode">
 <a class="viewcode-back" href="../../codesignal.html#codesignal.find_middle_element.ListNode">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">ListNode</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a node in a singly-linked list.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class represents a node in a singly-linked list.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">value</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
