--- a/python/katas/_modules/codewars/abbreviate_a_two_word_name.html
+++ b/python/katas/_modules/codewars/abbreviate_a_two_word_name.html
@@ -258,7 +258,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    This function abbreviates the first name and last name of a person.</span>
 
-<span class="sd">    :param name: A string that contains a first name and last name separated by spaces</span>
+<span class="sd">    :param name: A string that contains a first name and last name separated by</span>
+<span class="sd">        spaces</span>
 <span class="sd">    :return: An abbreviation</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">first</span><span class="p">,</span> <span class="n">second</span> <span class="o">=</span> <span class="n">name</span><span class="o">.</span><span class="n">upper</span><span class="p">()</span><span class="o">.</span><span class="n">split</span><span class="p">()</span>
