--- a/python/katas/_modules/codewars/acrostic_reader.html
+++ b/python/katas/_modules/codewars/acrostic_reader.html
@@ -256,8 +256,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.acrostic_reader.read_out">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">read_out</span><span class="p">(</span><span class="n">acrostic</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the word that is spelled out in an acrostic (the first letter of each line</span>
-<span class="sd">    spells out a word).</span>
+<span class="sd">    This function returns the word that is spelled out in an acrostic (the</span>
+<span class="sd">    first letter of each line spells out a word).</span>
 
 <span class="sd">    :param acrostic: The input string, an acrostic</span>
 <span class="sd">    :return: The word that is spelled out in the acrostic</span>
