--- a/python/katas/_modules/codewars/adding_remainders_to_a_list.html
+++ b/python/katas/_modules/codewars/adding_remainders_to_a_list.html
@@ -256,8 +256,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.adding_remainders_to_a_list.solve">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">solve</span><span class="p">(</span><span class="n">nums</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">],</span> <span class="n">div</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function divides each integer in :attr:`nums` by :attr:`div` and adds the remainder to it.</span>
-<span class="sd">    A new list is returned. The original list is not modified.</span>
+<span class="sd">    This function divides each integer in :attr:`nums` by :attr:`div` and adds</span>
+<span class="sd">    the remainder to it. A new list is returned. The original list is not</span>
+<span class="sd">    modified.</span>
 
 <span class="sd">    :param nums: The input list of integers</span>
 <span class="sd">    :param div: The divisor</span>
