--- a/python/katas/_modules/codewars/all_balanced_parentheses.html
+++ b/python/katas/_modules/codewars/all_balanced_parentheses.html
@@ -256,14 +256,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.all_balanced_parentheses.dfs">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">dfs</span><span class="p">(</span><span class="n">parens</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">left</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">right</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This helper function generates parentheses and adds them to the :attr:`parens` list.</span>
-<span class="sd">    :attr:`left` and :attr:`right` represent the remaining number of ( and ) that need to be added,</span>
-<span class="sd">    respectively.</span>
+<span class="sd">    This helper function generates parentheses and adds them to the</span>
+<span class="sd">    :attr:`parens` list. :attr:`left` and :attr:`right` represent the remaining</span>
+<span class="sd">    number of ( and ) that need to be added, respectively.</span>
 
 <span class="sd">    :param parens: The list of parentheses</span>
 <span class="sd">    :param left: The remaining number of ( that need to be added</span>
 <span class="sd">    :param right: The remaining number of ) that need to be added</span>
-<span class="sd">    :param string: The string to append to each parenthesis, initially an empty string</span>
+<span class="sd">    :param string: The string to append to each parenthesis, initially an empty</span>
+<span class="sd">        string</span>
 <span class="sd">    :return: None, the parentheses are added to :attr:`parens`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">left</span> <span class="o">&gt;</span> <span class="n">right</span><span class="p">:</span>
@@ -282,9 +283,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.all_balanced_parentheses.balanced_parens">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">balanced_parens</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function generates balanced (valid) parentheses using the recursive :func:`dfs` function.</span>
+<span class="sd">    This function generates balanced (valid) parentheses using the recursive</span>
+<span class="sd">    :func:`dfs` function.</span>
 
-<span class="sd">    :param number: The input integer, number of pairs of parentheses to generate</span>
+<span class="sd">    :param number: An integer, the number of pairs of parentheses to generate</span>
 <span class="sd">    :return: A string of balanced parentheses</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">parens</span> <span class="o">=</span> <span class="p">[]</span>
