--- a/python/katas/_modules/codewars/all_star_code_challenge_number_31.html
+++ b/python/katas/_modules/codewars/all_star_code_challenge_number_31.html
@@ -257,9 +257,7 @@
 <div class="viewcode-block" id="Instruction">
 <a class="viewcode-back" href="../../codewars.html#codewars.all_star_code_challenge_number_31.Instruction">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Instruction</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents an instruction for mixing chemicals.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class represents an instruction for mixing chemicals.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">amount</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">instrument</span><span class="p">,</span> <span class="n">note</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
