--- a/python/katas/_modules/codewars/calculating_with_functions.html
+++ b/python/katas/_modules/codewars/calculating_with_functions.html
@@ -260,7 +260,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Returns a function that will add two numbers together.</span>
 
-<span class="sd">    :param func: The number that will be on the right-hand side of the plus sign</span>
+<span class="sd">    :param func: The number that will be on the right-hand side of the plus</span>
+<span class="sd">        sign</span>
 <span class="sd">    :return: A function that will be used to add two numbers together</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -277,7 +278,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Returns a function that will subtract one number from another.</span>
 
-<span class="sd">    :param func: The number that will be on the right-hand side of the minus sign</span>
+<span class="sd">    :param func: The number that will be on the right-hand side of the minus</span>
+<span class="sd">        sign</span>
 <span class="sd">    :return: A function that will be used to subtract one number from another</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -294,7 +296,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Returns a function that will multiply two numbers together.</span>
 
-<span class="sd">    :param func: The number that will be on the right-hand side of the multiply sign</span>
+<span class="sd">    :param func: The number that will be on the right-hand side of the multiply</span>
+<span class="sd">        sign</span>
 <span class="sd">    :return: A function that will be used to multiply two numbers together</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -311,7 +314,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Returns a function that will divide two numbers.</span>
 
-<span class="sd">    :param func: The number that will be on the right-hand side of the division sign</span>
+<span class="sd">    :param func: The number that will be on the right-hand side of the division</span>
+<span class="sd">        sign</span>
 <span class="sd">    :return: A function that will be used to divide two numbers</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -328,8 +332,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 0.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 0 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;0 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">0</span></div>
@@ -342,8 +346,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 1.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 1 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;1 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">1</span></div>
@@ -356,8 +360,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 2.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 2 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;2 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">2</span></div>
@@ -370,8 +374,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 3.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 3 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;3 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">3</span></div>
@@ -384,8 +388,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 4.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 4 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;4 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">4</span></div>
@@ -398,8 +402,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 5.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 5 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;5 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">5</span></div>
@@ -412,8 +416,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 6.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 6 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;6 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">6</span></div>
@@ -426,8 +430,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 7.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 7 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;7 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">7</span></div>
@@ -440,8 +444,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 8.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 8 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;8 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">8</span></div>
@@ -454,8 +458,8 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the number 9.</span>
 
-<span class="sd">    :param func: If not None, represents a mathematical function of which this number is on the</span>
-<span class="sd">        left-hand side</span>
+<span class="sd">    :param func: If not None, represents a mathematical function of which this</span>
+<span class="sd">        number is on the left-hand side</span>
 <span class="sd">    :return: The number 9 or the result of the mathematical function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">eval</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;9 </span><span class="si">{</span><span class="n">func</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">func</span> <span class="k">else</span> <span class="mi">9</span></div>
