--- a/python/katas/_modules/codewars/duck_duck_goose.html
+++ b/python/katas/_modules/codewars/duck_duck_goose.html
@@ -257,9 +257,7 @@
 <div class="viewcode-block" id="Player">
 <a class="viewcode-back" href="../../codewars.html#codewars.duck_duck_goose.Player">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Player</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a person who is playing the Duck Duck Goose game.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents a person who is playing the Duck Duck Goose game.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
