--- a/python/katas/_modules/codewars/likes_vs_dislikes.html
+++ b/python/katas/_modules/codewars/likes_vs_dislikes.html
@@ -258,9 +258,8 @@
 <div class="viewcode-block" id="Like">
 <a class="viewcode-back" href="../../codewars.html#codewars.likes_vs_dislikes.Like">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Like</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a Like button.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class represents a Like button.&quot;&quot;&quot;</span>
+
     <span class="k">pass</span></div>
 
 
@@ -268,9 +267,8 @@
 <div class="viewcode-block" id="Dislike">
 <a class="viewcode-back" href="../../codewars.html#codewars.likes_vs_dislikes.Dislike">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Dislike</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a Dislike button.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class represents a Dislike button.&quot;&quot;&quot;</span>
+
     <span class="k">pass</span></div>
 
 
@@ -282,6 +280,7 @@
 <span class="sd">    This class represents an undo of a button press, e.g. pressing the Like</span>
 <span class="sd">    button two times.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
+
     <span class="k">pass</span></div>
 
 
