--- a/python/katas/_modules/codewars/make_the_deadfish_swim.html
+++ b/python/katas/_modules/codewars/make_the_deadfish_swim.html
@@ -256,12 +256,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.make_the_deadfish_swim.parse">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">parse</span><span class="p">(</span><span class="n">data</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function parses commands written in the Deadfish esoteric language. &quot;i&quot; increments the</span>
-<span class="sd">    value in the accumulator (starting value is 0), &quot;d&quot; decrements the value in the accumulator, &quot;s&quot;</span>
-<span class="sd">    squares the value in the accumulator, and &quot;o&quot; appends the value in the accumulator to a list</span>
-<span class="sd">    that is outputted when the function is returned.</span>
+<span class="sd">    This function parses commands written in the Deadfish esoteric language.</span>
+<span class="sd">    &quot;i&quot; increments the value in the accumulator (starting value is 0), &quot;d&quot;</span>
+<span class="sd">    decrements the value in the accumulator, &quot;s&quot; squares the value in the</span>
+<span class="sd">    accumulator, and &quot;o&quot; appends the value in the accumulator to a list that is</span>
+<span class="sd">    outputted when the function is returned.</span>
 
-<span class="sd">    :param data: The input string representing commands, each command being one character long</span>
+<span class="sd">    :param data: The input string representing commands, each command being one</span>
+<span class="sd">        character long</span>
 <span class="sd">    :return: A list of values from the accumulator</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">results</span> <span class="o">=</span> <span class="p">[]</span>
