--- a/python/katas/_modules/codewars/making_copies.html
+++ b/python/katas/_modules/codewars/making_copies.html
@@ -256,8 +256,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.making_copies.copy_list">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">copy_list</span><span class="p">(</span><span class="n">lst</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function makes a copy of the given list. If the input is not a list, a ValueError is</span>
-<span class="sd">    raised.</span>
+<span class="sd">    This function makes a copy of the given list. If the input is not a list, a</span>
+<span class="sd">    ValueError is raised.</span>
 
 <span class="sd">    :param lst: The input list to copy</span>
 <span class="sd">    :return: A copy of :attr:`lst`</span>
