--- a/python/katas/_modules/codewars/maximum_multiple.html
+++ b/python/katas/_modules/codewars/maximum_multiple.html
@@ -256,12 +256,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.maximum_multiple.max_multiple">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">max_multiple</span><span class="p">(</span><span class="n">divisor</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">bound</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function finds a number that is divisible by the given divisor and is the highest value</span>
-<span class="sd">    that is below or equal to :attr:`bound`.</span>
+<span class="sd">    This function finds a number that is divisible by the given divisor and is</span>
+<span class="sd">    the highest value that is below or equal to :attr:`bound`.</span>
 
 <span class="sd">    :param divisor: The input integer</span>
-<span class="sd">    :param bound: The input integer, the starting value that may or may not be divisible by</span>
-<span class="sd">        :attr:`divisor`</span>
+<span class="sd">    :param bound: The input integer, the starting value that may or may not be</span>
+<span class="sd">        divisible by :attr:`divisor`</span>
 <span class="sd">    :return: A number that is divisible by :attr:`divisor`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">current_number</span> <span class="o">=</span> <span class="n">bound</span>
