--- a/python/katas/_modules/codewars/median_fun_fun.html
+++ b/python/katas/_modules/codewars/median_fun_fun.html
@@ -259,7 +259,8 @@
 <span class="sd">    This function returns the median of the given list of integers.</span>
 
 <span class="sd">    :param arr: The input list of integers</span>
-<span class="sd">    :return: The median number, may be an integer or a float (if the length of the list is even)</span>
+<span class="sd">    :return: The median number, may be an integer or a float (if the length of</span>
+<span class="sd">        the list is even)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">arr</span><span class="p">:</span>
         <span class="k">return</span> <span class="kc">None</span>
