--- a/python/katas/_modules/codewars/message_validator.html
+++ b/python/katas/_modules/codewars/message_validator.html
@@ -258,10 +258,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.message_validator.is_a_valid_message">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">is_a_valid_message</span><span class="p">(</span><span class="n">message</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function validates that the given :attr:`message` is in the following format: length of</span>
-<span class="sd">    word followed by word, length of word followed by word, etc. For example, given &quot;3hey5hello2hi&quot;,</span>
-<span class="sd">    this function will return True because &quot;hey&quot; is 3 characters long, &quot;hello&quot; is 5 characters long,</span>
-<span class="sd">    and &quot;hi&quot; is 2 characters long.</span>
+<span class="sd">    This function validates that the given :attr:`message` is in the following</span>
+<span class="sd">    format: length of word followed by word, length of word followed by word,</span>
+<span class="sd">    etc. For example, given &quot;3hey5hello2hi&quot;, this function will return True</span>
+<span class="sd">    because &quot;hey&quot; is 3 characters long, &quot;hello&quot; is 5 characters long, and &quot;hi&quot;</span>
+<span class="sd">    is 2 characters long.</span>
 
 <span class="sd">    :param message: The input string, the message to validate</span>
 <span class="sd">    :return: True if the message passes validation, False otherwise</span>
