--- a/python/katas/_modules/codewars/middle_me.html
+++ b/python/katas/_modules/codewars/middle_me.html
@@ -256,12 +256,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.middle_me.middle_me">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">middle_me</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">key</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">text</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function takes :attr:`key` and puts it in the middle of :attr:`text` that is repeated</span>
-<span class="sd">    :attr:`number` times. If :attr:`number` is odd, then :attr:`key` is simply returned.</span>
+<span class="sd">    This function takes :attr:`key` and puts it in the middle of :attr:`text`</span>
+<span class="sd">    that is repeated :attr:`number` times. If :attr:`number` is odd, then</span>
+<span class="sd">    :attr:`key` is simply returned.</span>
 
 <span class="sd">    :param number: The number of times to repeat :attr:`text`</span>
-<span class="sd">    :param key: The string to put in the middle of :attr:`text` after it is repeated :attr:`number`</span>
-<span class="sd">        times</span>
+<span class="sd">    :param key: The string to put in the middle of :attr:`text` after it is</span>
+<span class="sd">        repeated :attr:`number` times</span>
 <span class="sd">    :param text: The string to repeat :attr:`number` times</span>
 <span class="sd">    :return: A string</span>
 <span class="sd">    &quot;&quot;&quot;</span>
