--- a/python/katas/_modules/codewars/opposites_attract.html
+++ b/python/katas/_modules/codewars/opposites_attract.html
@@ -256,12 +256,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.opposites_attract.lovefunc">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">lovefunc</span><span class="p">(</span><span class="n">flower_1</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">flower_2</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns True if :attr:`flower_1` is odd and :attr:`flower_2` is even, or vice</span>
-<span class="sd">    versa. False is returned if both are odd or both are even.</span>
+<span class="sd">    This function returns True if :attr:`flower_1` is odd and :attr:`flower_2`</span>
+<span class="sd">    is even, or vice versa. False is returned if both are odd or both are even.</span>
 
 <span class="sd">    :param flower_1: The input integer</span>
 <span class="sd">    :param flower_2: The input integer</span>
-<span class="sd">    :return: True if one integer is odd and the other is even, False if both are odd or even</span>
+<span class="sd">    :return: True if one integer is odd and the other is even, False if both</span>
+<span class="sd">        are odd or even</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">flower_1</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">0</span> <span class="ow">and</span> <span class="n">flower_2</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">return</span> <span class="kc">False</span>
