--- a/python/katas/_modules/codewars/order_of_weight.html
+++ b/python/katas/_modules/codewars/order_of_weight.html
@@ -256,9 +256,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.order_of_weight.arrange">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">arrange</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function sorts the given list of weights expressed as grams (G), kilograms (KG), and</span>
-<span class="sd">    tonnes (T) from light to heavy. The weights are converted to tonnes only for sorting, so the</span>
-<span class="sd">    list that is returned retains the original units of measurement.</span>
+<span class="sd">    This function sorts the given list of weights expressed as grams (G),</span>
+<span class="sd">    kilograms (KG), and tonnes (T) from light to heavy. The weights are</span>
+<span class="sd">    converted to tonnes only for sorting, so the list that is returned retains</span>
+<span class="sd">    the original units of measurement.</span>
 
 <span class="sd">    :param arr: The input list of strings representing weights</span>
 <span class="sd">    :return: The same list of strings sorted from light to heavy</span>
