--- a/python/katas/_modules/codewars/over_the_road_1.html
+++ b/python/katas/_modules/codewars/over_the_road_1.html
@@ -256,14 +256,16 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.over_the_road_1.over_the_road">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">over_the_road</span><span class="p">(</span><span class="n">address</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">street_length</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function determines the house number opposite the given address. If address is odd, the</span>
-<span class="sd">    house number on the other side of the street is even, and vice versa. Odd-numbered houses are</span>
-<span class="sd">    lined up in ascending order from top to bottom while even-numbered houses are lined up in</span>
-<span class="sd">    descending order from top to bottom.</span>
+<span class="sd">    This function determines the house number opposite the given address. If</span>
+<span class="sd">    address is odd, the house number on the other side of the street is even,</span>
+<span class="sd">    and vice versa. Odd-numbered houses are lined up in ascending order from</span>
+<span class="sd">    top to bottom while even-numbered houses are lined up in descending order</span>
+<span class="sd">    from top to bottom.</span>
 
-<span class="sd">    :param address: The input street, a number representing an address that is either even or odd</span>
-<span class="sd">    :param street_length: The length of the street with odd-numbered houses on one side and even-</span>
-<span class="sd">        numbered houses on the other side</span>
+<span class="sd">    :param address: The input street, a number representing an address that is</span>
+<span class="sd">        either even or odd</span>
+<span class="sd">    :param street_length: The length of the street with odd-numbered houses on</span>
+<span class="sd">        one side and even-numbered houses on the other side</span>
 <span class="sd">    :return: The house number opposite the given address</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">address</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
