--- a/python/katas/_modules/codewars/ultimate_array_reverser.html
+++ b/python/katas/_modules/codewars/ultimate_array_reverser.html
@@ -256,11 +256,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.ultimate_array_reverser.reverse">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">reverse</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function concatenates all the strings in the given list, reverses the concatenated string,</span>
-<span class="sd">    and then returns a list that contains strings that form the reversed string when concatenated</span>
-<span class="sd">    together. The list will contain the same number of strings as the original list, and each</span>
-<span class="sd">    string in the list will contain the same number of characters as the one that is in the same</span>
-<span class="sd">    position in the original list.</span>
+<span class="sd">    This function concatenates all the strings in the given list, reverses the</span>
+<span class="sd">    concatenated string, and then returns a list that contains strings that</span>
+<span class="sd">    form the reversed string when concatenated together. The list will contain</span>
+<span class="sd">    the same number of strings as the original list, and each string in the</span>
+<span class="sd">    list will contain the same number of characters as the one that is in the</span>
+<span class="sd">    same position in the original list.</span>
 
 <span class="sd">    :param arr: The input list of strings</span>
 <span class="sd">    :return: A list of strings that contains the same number of elements</span>
