--- a/python/katas/_modules/leetcode/logger_rate_limit_359.html
+++ b/python/katas/_modules/leetcode/logger_rate_limit_359.html
@@ -257,9 +257,7 @@
 <div class="viewcode-block" id="Logger">
 <a class="viewcode-back" href="../../leetcode.html#leetcode.logger_rate_limit_359.Logger">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Logger</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a logger that will log messages.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class represents a logger that will log messages.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
