--- a/python/katas/genindex.html
+++ b/python/katas/genindex.html
@@ -5513,6 +5513,8 @@
 </li>
         <li><a href="codewars.html#codewars.alphabet_war_airstrike_letters_massacre.count_sides">count_sides() (in module codewars.alphabet_war_airstrike_letters_massacre)</a>
 </li>
+        <li><a href="codewars.html#codewars.array_info.count_strings_and_whitespaces">count_strings_and_whitespaces() (in module codewars.array_info)</a>
+</li>
         <li><a href="codesignal.html#codesignal.count_api.count_subprojects">count_subprojects() (in module codesignal.count_api)</a>
 </li>
         <li><a href="coderbyte.html#coderbyte.counting_anagrams.counting_anagrams">counting_anagrams() (in module coderbyte.counting_anagrams)</a>
@@ -9796,8 +9798,6 @@
         <li><a href="codewars.html#codewars.strings_starts_with.starts_with">starts_with() (in module codewars.strings_starts_with)</a>
 </li>
         <li><a href="codewars.html#codewars.calculator.str_to_list">str_to_list() (in module codewars.calculator)</a>
-</li>
-        <li><a href="codewars.html#codewars.array_info.str_whitespace_counts">str_whitespace_counts() (in module codewars.array_info)</a>
 </li>
         <li><a href="codewars.html#codewars.find_the_stray_number.stray">stray() (in module codewars.find_the_stray_number)</a>
 </li>
