--- a/python/katas/_modules/codewars/a_scandal_in_bohemia.html
+++ b/python/katas/_modules/codewars/a_scandal_in_bohemia.html
@@ -250,13 +250,15 @@
 
 <span class="sd">:Author: BJ Peter Dela Cruz</span>
 <span class="sd">&quot;&quot;&quot;</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">string</span><span class="w"> </span><span class="kn">import</span> <span class="n">ascii_uppercase</span>
 
 
 <div class="viewcode-block" id="key">
 <a class="viewcode-back" href="../../codewars.html#codewars.a_scandal_in_bohemia.key">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">key</span><span class="p">(</span><span class="n">text</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">extract</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function finds the substitution cipher key that was used to encrypt :attr:`extract`.</span>
+<span class="sd">    This function finds the substitution cipher key that was used to encrypt</span>
+<span class="sd">    :attr:`extract`.</span>
 
 <span class="sd">    :param text: The decrypted text</span>
 <span class="sd">    :param extract: An encrypted string</span>
@@ -270,7 +272,7 @@
     <span class="p">)</span>
     <span class="n">start_idx</span> <span class="o">=</span> <span class="n">text_chars</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">extract_chars</span><span class="p">)</span>
     <span class="n">cipher</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="nb">zip</span><span class="p">(</span><span class="n">get_characters</span><span class="p">(</span><span class="n">text</span><span class="p">[</span><span class="n">start_idx</span><span class="p">:]),</span> <span class="n">get_characters</span><span class="p">(</span><span class="n">extract</span><span class="p">)))</span>
-    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="n">cipher</span><span class="p">[</span><span class="n">letter</span><span class="p">]</span> <span class="k">for</span> <span class="n">letter</span> <span class="ow">in</span> <span class="s2">&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;</span><span class="p">])</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span></div>
+    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="n">cipher</span><span class="p">[</span><span class="n">letter</span><span class="p">]</span> <span class="k">for</span> <span class="n">letter</span> <span class="ow">in</span> <span class="n">ascii_uppercase</span><span class="p">])</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span></div>
 
 
 
@@ -278,12 +280,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.a_scandal_in_bohemia.get_characters">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">get_characters</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This helper function returns all 26 characters in the English alphabet in the order that they</span>
-<span class="sd">    appear in :attr:`string`.</span>
+<span class="sd">    This helper function returns all 26 characters in the English alphabet in</span>
+<span class="sd">    the order that they appear in :attr:`string`.</span>
 
 <span class="sd">    :param string: The string from which to get all 26 letters</span>
-<span class="sd">    :return: A list of all 26 letters of the English alphabet in the order that they appear in</span>
-<span class="sd">        :attr:`string`</span>
+<span class="sd">    :return: A list of all 26 letters of the English alphabet in the order that</span>
+<span class="sd">        they appear in :attr:`string`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">letters</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">word</span> <span class="ow">in</span> <span class="n">string</span><span class="p">:</span>
