--- a/python/katas/_modules/codewars/adding_values_of_arrays_in_a_shifted_way.html
+++ b/python/katas/_modules/codewars/adding_values_of_arrays_in_a_shifted_way.html
@@ -256,10 +256,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.adding_values_of_arrays_in_a_shifted_way.sum_arrays">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">sum_arrays</span><span class="p">(</span><span class="n">arrays</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">list</span><span class="p">],</span> <span class="n">shift</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function shifts all the integers in each sublist of :attr:`arrays` :attr:`shift` * N spaces</span>
-<span class="sd">    to the right where N is the index (starting at 0) of the sublist in :attr:`arrays`. After all</span>
-<span class="sd">    the integers in a sublist are shifted, they are summed with the integers in the list that is</span>
-<span class="sd">    returned. It is assumed that each sublist contains the same number of integers.</span>
+<span class="sd">    This function shifts all the integers in each sublist of :attr:`arrays`</span>
+<span class="sd">    :attr:`shift` * N spaces to the right where N is the index (starting at 0)</span>
+<span class="sd">    of the sublist in :attr:`arrays`. After all the integers in a sublist are</span>
+<span class="sd">    shifted, they are summed with the integers in the list that is returned. It</span>
+<span class="sd">    is assumed that each sublist contains the same number of integers.</span>
 
 <span class="sd">    :param arrays: A list containing lists of integers</span>
 <span class="sd">    :param shift: The value to shift all the integers in each sublist</span>
