--- a/python/katas/_modules/codewars/array_info.html
+++ b/python/katas/_modules/codewars/array_info.html
@@ -266,30 +266,32 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">lst</span><span class="p">:</span>
         <span class="k">return</span> <span class="s2">&quot;Nothing in the array!&quot;</span>
-    <span class="n">int_count</span> <span class="o">=</span> <span class="n">none_or_count</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="nb">filter</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="nb">int</span><span class="p">),</span> <span class="n">lst</span><span class="p">))))</span>
-    <span class="n">float_count</span> <span class="o">=</span> <span class="n">none_or_count</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="nb">filter</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="nb">float</span><span class="p">),</span> <span class="n">lst</span><span class="p">))))</span>
-    <span class="n">str_count</span><span class="p">,</span> <span class="n">whitespace_count</span> <span class="o">=</span> <span class="n">str_whitespace_counts</span><span class="p">(</span><span class="n">lst</span><span class="p">)</span>
+    <span class="n">int_count</span> <span class="o">=</span> <span class="n">none_or_count</span><span class="p">(</span><span class="n">lst</span><span class="p">,</span> <span class="nb">int</span><span class="p">)</span>
+    <span class="n">float_count</span> <span class="o">=</span> <span class="n">none_or_count</span><span class="p">(</span><span class="n">lst</span><span class="p">,</span> <span class="nb">float</span><span class="p">)</span>
+    <span class="n">str_count</span><span class="p">,</span> <span class="n">whitespace_count</span> <span class="o">=</span> <span class="n">count_strings_and_whitespaces</span><span class="p">(</span><span class="n">lst</span><span class="p">)</span>
     <span class="k">return</span> <span class="p">[[</span><span class="nb">len</span><span class="p">(</span><span class="n">lst</span><span class="p">)],</span> <span class="n">int_count</span><span class="p">,</span> <span class="n">float_count</span><span class="p">,</span> <span class="n">str_count</span><span class="p">,</span> <span class="n">whitespace_count</span><span class="p">]</span></div>
 
 
 
 <div class="viewcode-block" id="none_or_count">
 <a class="viewcode-back" href="../../codewars.html#codewars.array_info.none_or_count">[docs]</a>
-<span class="k">def</span><span class="w"> </span><span class="nf">none_or_count</span><span class="p">(</span><span class="n">count</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">none_or_count</span><span class="p">(</span><span class="n">lst</span><span class="p">:</span> <span class="nb">list</span><span class="p">,</span> <span class="n">datatype</span><span class="p">:</span> <span class="nb">type</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    This helper function returns a one-element list containing either a count</span>
 <span class="sd">    if it is greater than zero or None if the count is equal to zero.</span>
 
-<span class="sd">    :param count: The count</span>
+<span class="sd">    :param lst: The input list containing various data types</span>
+<span class="sd">    :param datatype: The datatype of the objects in the list to count</span>
 <span class="sd">    :return: A one-element list containing either a count or None</span>
 <span class="sd">    &quot;&quot;&quot;</span>
+    <span class="n">count</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="nb">filter</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">datatype</span><span class="p">),</span> <span class="n">lst</span><span class="p">)))</span>
     <span class="k">return</span> <span class="p">[</span><span class="kc">None</span><span class="p">]</span> <span class="k">if</span> <span class="n">count</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="p">[</span><span class="n">count</span><span class="p">]</span></div>
 
 
 
-<div class="viewcode-block" id="str_whitespace_counts">
-<a class="viewcode-back" href="../../codewars.html#codewars.array_info.str_whitespace_counts">[docs]</a>
-<span class="k">def</span><span class="w"> </span><span class="nf">str_whitespace_counts</span><span class="p">(</span><span class="n">lst</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">tuple</span><span class="p">[</span><span class="nb">list</span><span class="p">,</span> <span class="nb">list</span><span class="p">]:</span>
+<div class="viewcode-block" id="count_strings_and_whitespaces">
+<a class="viewcode-back" href="../../codewars.html#codewars.array_info.count_strings_and_whitespaces">[docs]</a>
+<span class="k">def</span><span class="w"> </span><span class="nf">count_strings_and_whitespaces</span><span class="p">(</span><span class="n">lst</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">tuple</span><span class="p">[</span><span class="nb">list</span><span class="p">,</span> <span class="nb">list</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    This helper function returns a tuple containing two counts, one of all the</span>
 <span class="sd">    strings in the given list and another of all the whitespace-only strings in</span>
@@ -307,7 +309,9 @@
                 <span class="n">counts</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">+=</span> <span class="mi">1</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="n">counts</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">+=</span> <span class="mi">1</span>
-    <span class="k">return</span> <span class="n">none_or_count</span><span class="p">(</span><span class="n">counts</span><span class="p">[</span><span class="mi">0</span><span class="p">]),</span> <span class="n">none_or_count</span><span class="p">(</span><span class="n">counts</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span></div>
+    <span class="n">first</span> <span class="o">=</span> <span class="p">[</span><span class="kc">None</span><span class="p">]</span> <span class="k">if</span> <span class="n">counts</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="p">[</span><span class="n">counts</span><span class="p">[</span><span class="mi">0</span><span class="p">]]</span>
+    <span class="n">second</span> <span class="o">=</span> <span class="p">[</span><span class="kc">None</span><span class="p">]</span> <span class="k">if</span> <span class="n">counts</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="p">[</span><span class="n">counts</span><span class="p">[</span><span class="mi">1</span><span class="p">]]</span>
+    <span class="k">return</span> <span class="n">first</span><span class="p">,</span> <span class="n">second</span></div>
 
 </pre></div>
         </article>
