--- a/python/katas/_modules/codewars/convert_a_linked_list_to_a_string.html
+++ b/python/katas/_modules/codewars/convert_a_linked_list_to_a_string.html
@@ -257,9 +257,7 @@
 <div class="viewcode-block" id="Node">
 <a class="viewcode-back" href="../../codewars.html#codewars.convert_a_linked_list_to_a_string.Node">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Node</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a node in a singly linked list.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class represents a node in a singly linked list.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">data</span><span class="p">,</span> <span class="n">next_node</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
