--- a/python/katas/_modules/codewars/make_equal.html
+++ b/python/katas/_modules/codewars/make_equal.html
@@ -256,15 +256,17 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.make_equal.count">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">count</span><span class="p">(</span><span class="n">numbers</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">],</span> <span class="n">target_number</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">value</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number of integers in :attr:`numbers` that can be incremented or</span>
-<span class="sd">    decremented by :attr:`value` any number of times to equal :attr:`target_number`. If</span>
-<span class="sd">    :attr:`value` is 0, then a count of the number of integers that equal :attr:`target_number` is</span>
-<span class="sd">    returned.</span>
+<span class="sd">    This function returns the number of integers in :attr:`numbers` that can be</span>
+<span class="sd">    incremented or decremented by :attr:`value` any number of times to equal</span>
+<span class="sd">    :attr:`target_number`. If :attr:`value` is 0, then a count of the number of</span>
+<span class="sd">    integers that equal :attr:`target_number` is returned.</span>
 
 <span class="sd">    :param numbers: The input list of integers</span>
 <span class="sd">    :param target_number: The target number</span>
-<span class="sd">    :param value: The value by which to increment or decrement each integer in :attr:`numbers`</span>
-<span class="sd">    :return: The number of integers in :attr:`numbers` that equal :attr:`target_number`</span>
+<span class="sd">    :param value: The value by which to increment or decrement each integer in</span>
+<span class="sd">        :attr:`numbers`</span>
+<span class="sd">    :return: The number of integers in :attr:`numbers` that equal</span>
+<span class="sd">        :attr:`target_number`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">value</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">return</span> <span class="nb">len</span><span class="p">([</span><span class="n">number</span> <span class="k">for</span> <span class="n">number</span> <span class="ow">in</span> <span class="n">numbers</span> <span class="k">if</span> <span class="n">number</span> <span class="o">==</span> <span class="n">target_number</span><span class="p">])</span>
