--- a/python/katas/_modules/codewars/map_over_a_list_of_lists.html
+++ b/python/katas/_modules/codewars/map_over_a_list_of_lists.html
@@ -256,7 +256,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.map_over_a_list_of_lists.grid_map">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">grid_map</span><span class="p">(</span><span class="n">lists</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">list</span><span class="p">],</span> <span class="n">operation</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function performs the given operation on each element in each list of the given list.</span>
+<span class="sd">    This function performs the given operation on each element in each list of</span>
+<span class="sd">    the given list.</span>
 
 <span class="sd">    :param lists: The input list of lists</span>
 <span class="sd">    :param operation: The operation to perform on each element in each list</span>
