--- a/python/katas/_modules/codewars/mexican_wave.html
+++ b/python/katas/_modules/codewars/mexican_wave.html
@@ -256,11 +256,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.mexican_wave.wave">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">wave</span><span class="p">(</span><span class="n">people</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function turns a string into a Mexican Wave. For example, given &quot;hello&quot;, this function will</span>
-<span class="sd">    return [&quot;Hello&quot;, &quot;hEllo&quot;, &quot;heLlo&quot;, &quot;helLo&quot;, &quot;hellO&quot;]. If the string has spaces in between each</span>
-<span class="sd">    word, they are ignored, and the next letter will be turned into uppercase. For example, given</span>
-<span class="sd">    &quot;It is&quot;, this function will return [&quot;It is&quot;, &quot;iT is&quot;, &quot;it Is&quot;, &quot;it iS&quot;]. The uppercase letter</span>
-<span class="sd">    represents a person standing up while the lowercase letters represent people sitting down.</span>
+<span class="sd">    This function turns a string into a Mexican Wave. For example,</span>
+<span class="sd">    wave(&quot;hello&quot;) will return [&quot;Hello&quot;, &quot;hEllo&quot;, &quot;heLlo&quot;, &quot;helLo&quot;, &quot;hellO&quot;]. If</span>
+<span class="sd">    the string has spaces in between each word, they are ignored, and the next</span>
+<span class="sd">    letter will be turned into uppercase. For example, wave(&quot;It is&quot;) will</span>
+<span class="sd">    return [&quot;It is&quot;, &quot;iT is&quot;, &quot;it Is&quot;, &quot;it iS&quot;]. The uppercase letter</span>
+<span class="sd">    represents a person standing up while the lowercase letters represent</span>
+<span class="sd">    people sitting down.</span>
 
 <span class="sd">    :param people: The input string that represents people</span>
 <span class="sd">    :return: The string turned into a Mexican Wave as described above</span>
