--- a/python/katas/_modules/codewars/multiplicative_persistence_dot_dot_dot_whats_special_about_277777788888899.html
+++ b/python/katas/_modules/codewars/multiplicative_persistence_dot_dot_dot_whats_special_about_277777788888899.html
@@ -256,9 +256,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.multiplicative_persistence_dot_dot_dot_whats_special_about_277777788888899.per">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">per</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function multiplies all the digits in the given integer and then adds the result to a list.</span>
-<span class="sd">    If the sum contains two or more digits, the process is repeated until the sum contains only one</span>
-<span class="sd">    digit, i.e., the sum is less than ten. The list of all the sums is then returned.</span>
+<span class="sd">    This function multiplies all the digits in the given integer and then adds</span>
+<span class="sd">    the result to a list. If the sum contains two or more digits, the process</span>
+<span class="sd">    is repeated until the sum contains only one digit, i.e., the sum is less</span>
+<span class="sd">    than ten. The list of all the sums is then returned.</span>
 
 <span class="sd">    :param number: The input integer</span>
 <span class="sd">    :return: A list of sums</span>
