--- a/python/katas/_modules/codewars/name_your_python.html
+++ b/python/katas/_modules/codewars/name_your_python.html
@@ -257,11 +257,10 @@
 <div class="viewcode-block" id="Python">
 <a class="viewcode-back" href="../../codewars.html#codewars.name_your_python.Python">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Python</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Initializes an instance of this class with a name.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents a class with just a single member variable.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">):</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Initialize an instance of this class with a name.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">name</span> <span class="o">=</span> <span class="n">name</span></div>
 
 </pre></div>
