--- a/python/katas/_modules/codewars/person_class_bug.html
+++ b/python/katas/_modules/codewars/person_class_bug.html
@@ -257,9 +257,7 @@
 <div class="viewcode-block" id="Person">
 <a class="viewcode-back" href="../../codewars.html#codewars.person_class_bug.Person">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Person</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a person with a first name, last name, and age.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents a person with a first name, last name, and age.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">first_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">last_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">age</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
