--- a/python/katas/_modules/codewars/refactored_greeting.html
+++ b/python/katas/_modules/codewars/refactored_greeting.html
@@ -257,9 +257,7 @@
 <div class="viewcode-block" id="Person">
 <a class="viewcode-back" href="../../codewars.html#codewars.refactored_greeting.Person">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Person</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a person.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class represents a person.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
