--- a/python/katas/_modules/codewars/urban_dictionary.html
+++ b/python/katas/_modules/codewars/urban_dictionary.html
@@ -262,9 +262,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Initializes an empty dictionary that will contain words.</span>
-<span class="sd">        &quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Initializes an empty dictionary that will contain words.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">word_dict</span> <span class="o">=</span> <span class="p">[]</span>
 
 <div class="viewcode-block" id="WordDictionary.add_word">
