--- a/python/katas/_modules/codewars/vigenere_cipher_helper.html
+++ b/python/katas/_modules/codewars/vigenere_cipher_helper.html
@@ -255,9 +255,7 @@
 <div class="viewcode-block" id="VigenereCipher">
 <a class="viewcode-back" href="../../codewars.html#codewars.vigenere_cipher_helper.VigenereCipher">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">VigenereCipher</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class will encode and decode a string using the Vigenere Cipher.</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;This class will encode and decode a string using the Vigenere Cipher.&quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">alphabet</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
