--- a/python/katas/_modules/utils/math_utils.html
+++ b/python/katas/_modules/utils/math_utils.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../utils.html#utils.math_utils.sieve_of_eratosthenes">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">sieve_of_eratosthenes</span><span class="p">(</span><span class="n">maximum</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function implements the Sieve of Eratosthenes algorithm, which will produce an array of</span>
-<span class="sd">    prime numbers from 2 to square root of :attr:`maximum`.</span>
+<span class="sd">    This function implements the Sieve of Eratosthenes algorithm, which will</span>
+<span class="sd">    produce an array of prime numbers from 2 to square root of :attr:`maximum`.</span>
 
 <span class="sd">    :param maximum: The upper limit for the algorithm</span>
-<span class="sd">    :return: An array of prime numbers between 2 and square root of :attr:`maximum`</span>
+<span class="sd">    :return: An array of prime numbers between 2 and square root of</span>
+<span class="sd">        :attr:`maximum`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">arr</span> <span class="o">=</span> <span class="p">[</span><span class="kc">True</span> <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">maximum</span><span class="p">)]</span>
     <span class="k">for</span> <span class="n">outer_idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span> <span class="nb">int</span><span class="p">(</span><span class="n">sqrt</span><span class="p">(</span><span class="n">maximum</span><span class="p">))):</span>
